fix: remove scrollbar and hit screen in landing page

--- a/app/(landing)/globals.css
+++ b/app/(landing)/globals.css
@@ -109,7 +109,7 @@ input {
 
 /* Scrollbar Styling */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 0px;
 }
 
 ::-webkit-scrollbar-track {
